# pigweed

./: modules.gni  package.json
pw_arduino_build/py/pw_arduino_build/: file_operations.py
pw_bytes/: BUILD  BUILD.gn
pw_bytes/public/pw_bytes/: endianness.h
pw_i2c/: BUILD  BUILD.gn  docs.rst
pw_i2c/public/pw_i2c/: i2c_bus.h  i2c_register_device.h
pw_i2c_baremetal_stm32f429/: BUILD  BUILD.gn  demo_app_main.cc  docs.rst  i2c_baremetal.cc
pw_i2c_baremetal_stm32f429/public/pw_i2c_baremetal_stm32f429/: i2c_baremetal.h
targets/stm32f429i-disc1/: target_toolchains.gni
