# Copyright 2020 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

# gn-format disable
import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
config("default_config") {
  include_dirs = [ "public" ]
}

pw_source_set("pw_i2c_baremetal_stm32f429") {
  public_configs = [ ":default_config" ]
  public = [ "public/pw_i2c_baremetal_stm32f429/i2c_baremetal.h" ]
  public_deps = [
    dir_pw_bytes,
    dir_pw_i2c,
    dir_pw_log,
    dir_pw_preprocessor,
    dir_pw_status,
  ]
  sources = [ "i2c_baremetal.cc" ]
}

pw_doc_group("docs") {
  sources = [ "docs.rst" ]
}

pw_executable("demo_app") {
  sources = [ "demo_app_main.cc" ]

  deps = [
    "$dir_pw_bytes",
    "$dir_pw_i2c_baremetal_stm32f429",
    "$dir_pw_log",
  ]
}
